# SG_proj_005

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  REQUIREMENTS.md  app.py  app_gradio.py  benchmark_report.md  development_log.txt  docker-compose.yml  error_out.txt  export.py  inference_engine.py  log.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  synthesize_data.py  task.md  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-app.yml
.streamlit/: config.toml
configs/: surface_config.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  task.md
exported_models/weights/torch/: model.pt
tests/: test_inference.py  test_train.py
tools/: export.py  prepare_data.py  synthesize_data.py
